--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -54,7 +54,7 @@
         flex-basis: auto
       &-description
         margin: 0 0 -10px 0
-        height: 156px
+        height: 157px
         +Mulish(normal, 14px)
         line-height: 22.48px
         overflow: auto
