--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -67,8 +67,9 @@
       +Mulish(normal, 10px)
       color: $text-color
     &__text
-      margin: 28px 0 0 0
+      margin: 26px 0 0 0
       max-width: 537px
+      height: 116px
       +Mulish(normal, 12px)
       color: $text-color
       line-height: 19.2px
